--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/tailwind": "^6.0.2",
     "astro": "^5.5.4",
+    "marked": "^17.0.3",
     "tailwindcss": "^3.4.17"
   }
 }
